layer0/apps/cilium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valley-no
  namespace: valley-no
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valley-no
  template:
    metadata:
      labels:
        app: valley-no
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
