layer0/apps/cilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valley-no
  namespace: valley-no
spec:
  selector:
    app: valley-no
  ports:
    - port: 443
      targetPort: 80
