layer0/apps/cilium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valley-no
  namespace: valley-no
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - valley.no
      secretName: valley-no-tls
  rules:
    - host: valley.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: valley-no
                port:
                  number: 80
